# EVENordic_Example

EveNordic_CustomWidgets/: README.md  prj.conf
EveNordic_Example/: CMakeLists.txt  README.md
EveNordic_Example/boards/: nrf5340dk_nrf5340_cpuapp.overlay
EveNordic_Example/build_7/: .ninja_log  CMakeCache.txt  EveNordic_Example_sysbuild_cache.txt.tmp  build.ninja  build_info.yml  cmake_install.cmake  domains.yaml  merged.hex
EveNordic_Example/build_7/EveNordic_Example/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  build_info.yml.bak  cmake_install.cmake  compile_commands.json
EveNordic_Example/build_7/EveNordic_Example/Kconfig/: Kconfig.dts  Kconfig.shield
EveNordic_Example/build_7/EveNordic_Example/tfm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  install_manifest.txt
EveNordic_Example/build_7/EveNordic_Example/zephyr/: .cmake.dotconfig.checksum  .config  .config.old  cmake_install.cmake  dts.cmake  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  runners.yaml  zephyr.dts  zephyr.dts.pre  zephyr.elf  zephyr.hex  zephyr.stat  zephyr_final.map  zephyr_pre0.elf  zephyr_pre0.map
EveNordic_Example/build_7/Kconfig/: Kconfig.shield.defconfig
EveNordic_Example/build_7/_sysbuild/: autoconf.h  cmake_install.cmake
EveNordic_Example/build_7/zephyr/: .config
EveNordic_Example/build_7/zephyr/kconfig/: sources.txt
EveNordic_Example/main/: CMakeLists.txt  platform.c  riverdi-demo.c
EveNordic_Example/riverdi-eve-lib/app_layer/: App_Common.c
(+86 files in other folders)
